update lombok configuration